custom form field labels, auto scroll to form, datepicker z-index fix, hide venues field if only 1 venue
git-svn-id: https://plugins.svn.wordpress.org/vacancy-personal-edition/trunk@1119174 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/va-admin.css
+++ b/css/va-admin.css
@@ -65,3 +65,5 @@
 .icon-ok {float:left; margin-left:10px; color:#70b92f; font-size: 1.8em;}
 .icon-remove {float:left; margin-left:10px; color:red; font-size: 1.8em;}
 #va-setup-usage ul {list-style: disc; margin-left:20px;}
+.va-main-wrap form .form-field-labels label {float:none; width:auto; display:block;}
+.va-main-wrap form .form-field-labels input {width:400px;}
