--- a/css/va-datepicker.css
+++ b/css/va-datepicker.css
@@ -8,7 +8,7 @@ table.ui-datepicker-calendar {border-collapse: separate;}
 .ui-datepicker .ui-datepicker-calendar .ui-state-active {background-color: #38c; border-color: #38c;color: #fff;text-shadow: 0 1px 0 #059;}
 .va-multi .ui-datepicker .ui-datepicker-calendar .ui-state-active {background-color: #ffffff;	border-color: #d3d3d3;	color:#555;	text-shadow:none;}
 .va-multi .ui-datepicker .ui-datepicker-calendar .ui-state-highlight a {background-color: #38c;	border-color: #38c;	color: #fff;	text-shadow: 0 1px 0 #059;}
-.ui-datepicker {width:auto;}
+.ui-datepicker {width:auto; z-index:9999;}
 @media screen and (max-width: 400px){
 	.ui-datepicker {font-size: 0.9em;}
 }
